brought back the harness to make styling easier, moved the authoring bar, killed the tools page.  Closes GH-11

--- a/src/FubuDocs/content/styles/fubudocs.core.css
+++ b/src/FubuDocs/content/styles/fubudocs.core.css
@@ -76,3 +76,15 @@ text-align: right;
 .no-release {
     max-width: 175px;
 }
+
+.authoring {
+    background-color: black;
+    color: white;
+    font-weight: normal;
+    padding: 3px;
+    margin-bottom: 2px;
+}
+
+.authoring a {
+    color: white;
+}
