--- a/src/FubuDocs/content/styles/fubudocs.core.css
+++ b/src/FubuDocs/content/styles/fubudocs.core.css
@@ -110,7 +110,7 @@ p { line-height: 1.5em; }
  * Nestable
  */
 
-.dd { position: relative; display: block; margin: 0; padding: 0; max-width: 600px; list-style: none; font-size: 13px; line-height: 20px; }
+.dd { position: relative; display: block; margin: 0; padding: 0; max-width: 100%; list-style: none; font-size: 13px; line-height: 20px; }
 
 .dd-list { display: block; position: relative; margin: 0; padding: 0; list-style: none; }
 .dd-list .dd-list { padding-left: 30px; }
@@ -222,4 +222,8 @@ p { line-height: 1.5em; }
  */
 
 .socialite { display: block; float: left; height: 35px; }
+
+#topic-tree {
+    width: 90%;
+}
 
