look and feel of the alter and new topic forms

--- a/src/FubuDocs/content/styles/fubudocs.core.css
+++ b/src/FubuDocs/content/styles/fubudocs.core.css
@@ -230,3 +230,10 @@ p { line-height: 1.5em; }
 .add-topic-link button:focus {
     outline: black thin solid !important; 
 }
+
+li.active-topic > div.dd3-content
+{
+    color: #CC3300 !important;
+    background: none !important;
+}
+
