nuget and gem helpers.  Closes GH-55, Closes GH-61

--- a/src/FubuDocs/content/styles/fubudocs.core.css
+++ b/src/FubuDocs/content/styles/fubudocs.core.css
@@ -262,3 +262,26 @@ li.new-topic > div.dd3-content {
     min-width: 75px;
 }
 
+
+div.install {
+    color: #666666;
+    font-size: larger;
+    padding: 19px;
+    
+    background-color: #F5F5F5;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    display: block;
+    font-size: 12.025px;
+    line-height: 18px;
+    margin: 0 0 9px;
+    white-space: pre-wrap;
+    word-break: break-all;
+    word-wrap: break-word;
+    margin-bottom: 40px;
+}
+
+i.icon-info-sign {
+    padding-right: 5px;
+}
+
